--- a/style/styles.css
+++ b/style/styles.css
@@ -18,22 +18,27 @@
   box-sizing: border-box;
 }
 body {
-  background-color: var(--Light-Grayish-Blue);
-  font-family: var(--body-font);
   min-height: 100vh;
   width: 100%;
+  background-color: var(--Light-Grayish-Blue);
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 2.5rem;
+  font-family: var(--body-font);
   font-size: 13px;
   box-sizing: border-box;
 }
 
 article {
-  display: flex;
   width: 40%;
-  align-items: center;
+  min-width: 615px;
   height: 240px;
+  display: flex;
+  align-items: center;
+  box-shadow: 5px 1px 34px var(--Grayish-Blue);
+  border-radius: 10px;
 }
 .product_image {
   width: 40%;
@@ -41,7 +46,7 @@ article {
   background-image: url(../images/drawers.jpg);
   background-position: 15%;
   background-size: cover;
-  border-radius: 10px  0 0 10px ;
+  border-radius: 10px 0 0 10px;
 }
 
 .buyer_review {
@@ -53,8 +58,7 @@ article {
   justify-content: space-around;
   height: 100%;
   position: relative;
-  border-radius:  0 10px 10px 0;
-
+  border-radius: 0 10px 10px 0;
 }
 .buyer_review h1 {
   color: var(--Very-Dark-Grayish-Blue);
@@ -88,31 +92,29 @@ article {
   color: var(--Very-Dark-Grayish-Blue);
   font-weight: 700;
 }
-.share{
+.share {
   background: var(--Light-Grayish-Blue);
   padding: 10px;
-border-radius: 50%;
-display: inline-block;
-cursor: pointer;
-position: relative;
+  padding-left: 12px;
+  border-radius: 50%;
+  position: relative;
+}
+.share svg {
+  fill: #6e8098;
+}
+.share:hover {
+  background: #6e8098;
+  cursor: pointer;  
 
 }
-.share svg{
-  fill: #6E8098;
-
-}
-.share:hover{
-  background: #6E8098;
-}
-.share:hover svg{
+.share:hover svg {
   fill: #fff;
+
 }
-
-
 
 #share-pop-up {
   position: absolute;
-  top:-70px;
+  top: -70px;
   left: -100px;
   background: var(--Very-Dark-Grayish-Blue);
   padding: 15px 30px;
@@ -122,6 +124,7 @@ position: relative;
   align-items: center;
   border-radius: 14px;
   z-index: 10;
+  cursor: auto;
 }
 
 .hidden {
@@ -131,7 +134,6 @@ position: relative;
 .visible {
   visibility: visible;
 }
-
 
 #share-pop-up p {
   color: var(--Grayish-Blue);
@@ -148,5 +150,32 @@ position: relative;
   border-right: 10px solid transparent;
   border-top: 10px solid var(--Very-Dark-Grayish-Blue);
 }
+#share-pop-up:hover img {
+  cursor: pointer;
+}
 
+.attribution {
+  font-size: 1rem;
+}
+.attribution a {
+  text-decoration: none;
+  color: var(--Desaturated-Dark-Blue);
+}
+.attribution a:hover {
+  color: var(--Very-Dark-Grayish-Blue);
+}
+@media screen and (max-width:700px) {
+  article{ height: auto;
+    flex-direction: column;
+    min-width: 50%;
 
+  }
+  .product_image{
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+  }
+  .buyer_review{
+    width: 100%;
+  }
+  
+}
