--- a/style/styles.css
+++ b/style/styles.css
@@ -173,7 +173,9 @@ display: none;
 }
 .attribution a:hover {
   color: var(--Very-Dark-Grayish-Blue);
+  font-weight: 600;
 }
+
 @media screen and (max-width: 700px) {
   article {
     height: auto;
@@ -251,7 +253,5 @@ fill:rgb(255, 255, 255);
 }
 @media screen and (max-width: 550px) {
   article {
-    
     box-shadow: none;
-
   }}
